==> KoalbyMQP/Urchin-Framework/Urchin_Firmware/src/Herkulex.cpp <==
#include "../src/Herkulex.h"
#include "../src/coms.h"
#include "freertos/FreeRTOS.h"
#include "../src/MSGQueue.h"
#include <string>
#include <cmath>
#define HSerial1     1 		// Write in Serial 1 port Arduino Mega - Pin 19(rx) - 18 (tx)
#define HSerial2     2   	// Write in Serial 2 port Arduino Mega - Pin 17(rx) - 16 (tx)
#define HSerial3     3   	// Write in Serial 3 port Arduino Mega - Pin 15(rx) - 14 (tx)
#define Serial      4   	// Write in SoftSerial Arduino with 328p or Mega

void HerkulexClass::begin(uart_port_t uart_num,long baud, int rx, int tx){

	init_uart(uart_num,baud,233,tx,rx);

	port = uart_num;
}

void HerkulexClass::sendData(byte* buffer, int lenght){

	// clearBuffer(); 		//clear the serialport buffer - try to do it!
	(void) uart_write_bytes(port, buffer, lenght);
        // switch (port)
		// {
		// 	// case Serial:
		// 	// 	SwSerial.write(buffer, lenght);
		// 	// 	delay(1);
		// 	// 	break;
		// 	case UART_NUM_0:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_1:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_2:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_MAX:
		// 		delay(1);
		// 		break;
		// 	#if defined (__AVR_ATmega1280__) || defined (__AVR_ATmega128__) || defined (__AVR_ATmega2560__)
		// 	case HSerial1:
		// 		Serial1.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	case HSerial2:
		// 		Serial2.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	case HSerial3:
		// 		Serial3.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	#endif
		// }
}

int HerkulexClass::readData(int size)
{
	int i = 0;
	byte* bpt = &dataEx[9];
	(void) uart_read_bytes(port, bpt, size, pdMS_TO_TICKS(10));
    // int beginsave=0;
    // int Time_Counter=0;
    // switch (port)
	// {
	// // case Serial:

    // //     while((SwSerial.available() < size) & (Time_Counter < TIME_OUT)){
    // //     		Time_Counter++;
    // //     		delayMicroseconds(1000);  //wait 1 millisecond for 10 times
	// // 	}
        	
	// // 	while (SwSerial.available() > 0){
	// // 		byte inchar = (byte)SwSerial.read();
	// // 		if ( (inchar == 0xFF) & ((byte)SwSerial.peek() == 0xFF) ){
	// // 				beginsave=1; 
	// // 				i=0; 				 // if found new header, begin again
	// // 		}
	// // 		if (beginsave==1 && i<size) {
	// // 			   dataEx[i] = inchar;
	// // 			   i++;
	// // 		}
	// // 	}
	// // 	SwSerial.flush();
	// // 	break;
	// case UART_NUM_0:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_1:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_2:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_MAX:
	// 			delay(1);
	// 			break;
	
	// #if defined (__AVR_ATmega1280__) || defined (__AVR_ATmega128__) || defined (__AVR_ATmega2560__)
	// case HSerial1:
	// 	while((Serial1.available() < size) & (Time_Counter < TIME_OUT)){
    //     		Time_Counter++;
    //     		delayMicroseconds(1000);
	// 	}      	
	// 	while (Serial1.available() > 0){
    //   		byte inchar = (byte)Serial1.read();
	// 		//printHexByte(inchar);
    //     	if ( (inchar == 0xFF) & ((byte)Serial1.peek() == 0xFF) ){
	// 					beginsave=1;
	// 					i=0; 						
    //          }
    //         if (beginsave==1 && i<size) {
    //                    dataEx[i] = inchar;
    //                    i++;
	// 		}
	// 	}
	// 	break;
	
	// case HSerial2:
	//     while((Serial2.available() < size) & (Time_Counter < TIME_OUT)){
    //     		Time_Counter++;
    //     		delayMicroseconds(1000);
	// 	}
        	
	// 	while (Serial2.available() > 0){
	// 		byte inchar = (byte)Serial2.read();
	// 		if ( (inchar == 0xFF) & ((byte)Serial2.peek() == 0xFF) ){
	// 				beginsave=1;
	// 				i=0; 					
	// 		}
	// 		if (beginsave==1 && i<size) {
	// 			   dataEx[i] = inchar;
	// 			   i++;
	// 		}
	// 	}
	// 	break;

	// case HSerial3:
	// 	while((Serial3.available() < size) & (Time_Counter < TIME_OUT)){
	// 		Time_Counter++;
	// 		delayMicroseconds(1000);
	// 	}
		
	// 	while (Serial3.available() > 0){
	// 		byte inchar = (byte)Serial3.read();
	// 		if ( (inchar == 0xFF) & ((byte)Serial3.peek() == 0xFF) ){
	// 				beginsave=1;
	// 				i=0; 
	// 		}
	// 		if (beginsave==1 && i<size) {
	// 			   dataEx[i] = inchar;
	// 			   i++;
	// 		}
	// 	}
	// 	break;
	// #endif
	// }
	return i;
}
